// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <div
      className="o-shell"
    >
      <Component
        className=" test"
        hasButton={true}
        hasShell={true}
        id="section"
      >
        <Children />
      </Component>
    </div>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a button 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section"
    id="section"
  >
    <div
      className="o-shell o-shell--flex"
    >
      <Component
        hasButton={false}
        hasShell={true}
        id="section"
        shellClass="o-shell--flex"
      >
        <Children />
      </Component>
    </div>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a button and a shell 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <Component
      className=" test"
      hasButton={false}
      hasShell={false}
      id="section"
    >
      <Children />
    </Component>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a shell 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <Component
      className=" test"
      hasButton={true}
      hasShell={false}
      id="section"
    >
      <Children />
    </Component>
  </section>
</main>
`;

exports[`SectionElements component Should render the SectionElements component 1`] = `
<Fragment>
  <Children />
  <div
    className="c-section__actions"
  >
    <Component
      onClick={[Function]}
      type="button"
    >
      Hire me
    </Component>
    <ul
      className="c-section__actions-list"
    >
      <li>
        <Component
          className="c-section__actions-close"
          onClick={[Function]}
          type="button"
        >
          Close
        </Component>
      </li>
      <li>
        <Component
          onClick={[Function]}
          type="button"
        >
          <Component
            className="c-section__actions-icon"
            name="svg-email"
          />
          Hire me directly
        </Component>
      </li>
      <li>
        <Component
          className="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          onClick={[Function]}
        >
          <Component
            className="c-section__actions-icon"
            name="svg-braintrust"
          />
          Hire me on Braintrust
        </Component>
      </li>
      <li>
        <Component
          className="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          onClick={[Function]}
        >
          <Component
            className="c-section__actions-icon"
            name="svg-toptal"
          />
          Hire me on Toptal
        </Component>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button 1`] = `
<Fragment>
  <Children />
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button and a shell 1`] = `
<Fragment>
  <Children />
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a shell 1`] = `
<Fragment>
  <Children />
  <div
    className="c-section__actions"
  >
    <Component
      onClick={[Function]}
      type="button"
    >
      Hire me
    </Component>
    <ul
      className="c-section__actions-list"
    >
      <li>
        <Component
          className="c-section__actions-close"
          onClick={[Function]}
          type="button"
        >
          Close
        </Component>
      </li>
      <li>
        <Component
          onClick={[Function]}
          type="button"
        >
          <Component
            className="c-section__actions-icon"
            name="svg-email"
          />
          Hire me directly
        </Component>
      </li>
      <li>
        <Component
          className="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          onClick={[Function]}
        >
          <Component
            className="c-section__actions-icon"
            name="svg-braintrust"
          />
          Hire me on Braintrust
        </Component>
      </li>
      <li>
        <Component
          className="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          onClick={[Function]}
        >
          <Component
            className="c-section__actions-icon"
            name="svg-toptal"
          />
          Hire me on Toptal
        </Component>
      </li>
    </ul>
  </div>
</Fragment>
`;
